fix(flex-grow): Set to stretch divs
* The squareDiv's were not stretching to fill vw.  This left a space
that was showing up as the red background once mouseover event triggered

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,4 +15,5 @@ body {
 
 .squareDiv {
     background-color: green;
+    flex-grow: 1;
 }
